# stakerdao-infra

./: .gitignore  .hosts  .tmp  README.md  common.nix  default.nix  flake.nix  hosts  nixops.nix  result  shell.nix
.buildkite/: pipeline.yml
modules/: default.nix
modules/services/: agora.nix  blend-tender.nix  vault-secrets.nix
nix/: default.nix  overlays.nix  sources.json
nodes/: agora.nix  blend-tender.nix  common.nix  default.nix  ssh-keys.nix
profiles/: agora.nix  blend-tender.nix  bridge.nix
scripts/: deploy.sh  terraform-validate.sh
scripts/deploy/: CHANGELOG.md  Main.hs  default.nix  deploy.cabal
scripts/deploy_haskell/: Main.hs  deploy.cabal  shell.nix
scripts/deploy_rust/: Cargo.toml  README.md  default.nix  deploy.rs  shell.nix
scripts/deploy_rust/nix/: sources.json
scripts/deploy_rust/nix/pkgs/: default.nix
scripts/deploy_rust/nix/pkgs/diesel_cli/: default.nix
servers/agora-production/: default.nix
servers/agora-staging/: default.nix
servers/blend-demo/: default.nix
servers/bridge-testing/: default.nix
terraform/: main.tf
