[package]
name = "deploy"
version = "0.1.0"
authors = ["Alexander Bantyev <balsoft@balsoft.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.3"
clap = { git = "https://github.com/clap-rs/clap/" }
mktemp = "0.3.1"

[[bin]]
name = "deploy"
path = "deploy.rs"
